k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - http:
      paths:
      - path: /nginx/
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 8000
